# rust-simple-ecommerce-api

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cursor/rules/: rust-rule.mdc
migrations/: 20240320000000_create_users_table.sql  20240320000001_create_products_table.sql
src/: main.rs
src/handlers/: auth.rs  mod.rs  product.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  product.rs  user.rs
