[package]
name = "simple-crud-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
jsonwebtoken = "9.1"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
rust_decimal = { version = "1.30", features = ["serde"] }
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "decimal", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
